# md-rs

./: Cargo.toml
src/: async_data.rs  endpoint.rs  error.rs  main.rs  schema.rs  types.rs  ui.rs
src/endpoint/: auth.rs
src/ui/: manga_list.rs  manga_view.rs
