[package]
name = "md"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
druid = { version = "0.7.0", features = ["im"] }
futures = "0.3.15"
once_cell = "1.7.2"
optfield = "0.2.0"
pretty-type-name = "1.0.0"
ratelimit = { path = "../ratelimit" }
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
snafu = "0.6.10"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde"] }
